--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "newenvreader"
-version = "0.1.1"
+version = "0.1.2"
 description = ""
 authors = ["Ajay Karthik <ajaykarthik.r23@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.10"
+python = "^3.10"
 
 
 [build-system]
